--- a/ObjectDetection.html
+++ b/ObjectDetection.html
@@ -33,7 +33,7 @@
 
 <script>
     //Get your key from customvision.ai
-    var PredicitionKey = "5951887b29a74effbaa9c0b85604f43f"; 
+    var PredicitionKey = "YOUR-KEY-HERE"; 
     var taggedAreas =[];
     
     function analyzeButtonClick() {
@@ -57,7 +57,7 @@
         $.ajax({
 
             //Find your URL at customvision.ai
-            url:"https://southcentralus.api.cognitive.microsoft.com/customvision/v2.0/Prediction/233aea84-c249-46ed-9f6f-d2798f91f4a9/url",
+            url:"ENDPOINT",
             
 
             // Request headers.
